--- a/assets/styles/base/variables.scss
+++ b/assets/styles/base/variables.scss
@@ -1,4 +1,4 @@
-$primary-color: #87CEFA;
-$secondary-color: #FF8C00;
+$primary-color: #E0FFFF;
+$secondary-color: #FFDEAD;
 $button-color:#65e3a6;
 $button-color-gradient: linear-gradient(to right, #5da3e4, #65e3a6);
