--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,9 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="/build/app.css">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        <title>{% block title %}Parc Automobile{% endblock %}</title>
+        <link rel="icon" href="{{ asset('build/images/favicon.ico.png') }}" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -15,6 +18,7 @@
         {% endblock %}
     </head>
     <body>
+        {% include '_components/_navbar.html.twig' %}
         {% block body %}{% endblock %}
     </body>
     <script src="/build/app.js"></script>
