--- a/templates/_components/_navbar.html.twig
+++ b/templates/_components/_navbar.html.twig
@@ -9,7 +9,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0 w-100 d-flex justify-content-end">
                 <li class="nav-item">
+                    {% if is_granted("ROLE_ADMIN") %}
+                    <a class="nav-link" href="">Espace Administrateur</a>
+                    {% endif %}
 
+                    {% if app.user %}
+                        <a class="nav-link" href="{{ path('app_logout') }}"><small><i class="fa-solid fa-right-from-bracket"></i> {{ app.user.fullname}} </small></a>
+                    {% else %}
+                        <a class="nav-link" href="{{ path('app_login') }}"><i class="fa-solid fa-circle-user"></i>Se connecter</a>
+                    {% endif %}
                 </li>
             </ul>
         </div>
