--- a/templates/_components/_navbar.html.twig
+++ b/templates/_components/_navbar.html.twig
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #FFDEAD;">
         <a class="nav-link active" aria-current="page" href="{{ path('accueil') }}">
             <img src="{{ asset('build/images/logo.png') }}" width="80" height="50" alt="logo"/></a>
-        <a class="navbar-brand" href="#">Parc Auto</a>
+        <a class="navbar-brand" href="#">Parc Automobile</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -10,13 +10,13 @@
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0 w-100 d-flex justify-content-end">
                 <li class="nav-item">
                     {% if is_granted("ROLE_ADMIN") %}
-                    <a class="nav-link" href="">Espace Administrateur</a>
+                    <a class="nav-link" href="{{ path('admin') }}">Espace Administrateur</a>
                     {% endif %}
 
                     {% if app.user %}
                         <a class="nav-link" href="{{ path('app_logout') }}"><small><i class="fa-solid fa-right-from-bracket"></i> {{ app.user.fullname}} </small></a>
                     {% else %}
-                        <a class="nav-link" href="{{ path('app_login') }}"><i class="fa-solid fa-circle-user"></i>Se connecter</a>
+                        <a class="nav-link" href="{{ path('app_login') }}"><i class="fa-solid fa-circle-user"></i>   Se connecter</a>
                     {% endif %}
                 </li>
             </ul>
